Bugfix: use a temporal variable to read the lines of the input and error streams.